samples/_failures_safe/1761130120_d987ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ebf64fb.c: In function ‘main’:
./samples/SAFE/__tmp_2ebf64fb.c:181:5: error: expected declaration or statement at end of input
  181 |     state_machine_init(&sm);
      |     ^~~~~~~~~~~~~~~~~~
